@@ -14,6 +14,10 @@ of the usual "- ".
 NEXT_RELEASE:
 -------------
 
+- #45, #190: add ppopt(arg) and ppxopt(package,arg) when -use-ocamlfind
+  (Gabriel Scherer, review by whitequark,
+   request by Gabriel Scherer, Gabriel Radanne and Pavel Argentov)
+
 0.12.0 (11 Nov 2017):
 ---------------------
 
